# interpolation-methods

./: .gitignore  CHANGELOG.md  LICENSE  interpolacion.cabal
app/: P2.hs  P3.hs
src/: Interpolation.hs
src/Interpolation/: CubicSpline.hs  DividedDifferences.hs
