cabal-version:      2.4
name:               interpolacion
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Gabriel P.
maintainer:          
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Interpolation,
                      Interpolation.CubicSpline,
                      Interpolation.DividedDifferences
    build-depends:
        base  >= 4.10,
        extra >= 1.5,
    hs-source-dirs:   src
    default-language: Haskell2010

executable p2
    main-is:          P2.hs
    build-depends:
        base  >= 4.10,
        extra >= 1.5,
        interpolacion

    hs-source-dirs:   app
    default-language: Haskell2010

executable p3
    main-is:          P3.hs
    build-depends:
        base  >= 4.10,
        extra >= 1.5,
        interpolacion
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite interpolacion-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base  >= 4.10,
        extra >= 1.5,
